--- a/core/backend/authentication/templates/login.html
+++ b/core/backend/authentication/templates/login.html
@@ -1,4 +1,4 @@
-{% extends "layouts/base.html" %}
+{% extends "layouts/base_auth.html" %}
 {% block title %} Login {% endblock title %}
 {% block content %}
 <!-- BEGIN: Content-->
