--- a/core/backend/authentication/templates/accounts/password_reset_sent.html
+++ b/core/backend/authentication/templates/accounts/password_reset_sent.html
@@ -1,4 +1,4 @@
-{% extends "../layouts/base.html" %} 
+{% extends "../layouts/base_auth.html" %} 
 {% block title %} Forget Password {% endblock title %} 
 {% block content %}
 
