--- a/core/backend/authentication/templates/register.html
+++ b/core/backend/authentication/templates/register.html
@@ -1,4 +1,4 @@
-{% extends "layouts/base.html" %} 
+{% extends "layouts/base_auth.html" %} 
 {% block title %} Register {% endblock title %}
 {% block content %}
 
