--- a/core/backend/student/templates/includes/source.html
+++ b/core/backend/student/templates/includes/source.html
@@ -75,6 +75,9 @@
       type="text/css"
       href="/static/app-assets/css/plugins/extensions/ext-component-toastr.css"
     />
+
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- END: Page CSS-->
 
     <!-- BEGIN: Custom CSS-->
