--- a/core/backend/student/templates/layouts/base.html
+++ b/core/backend/student/templates/layouts/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="loading" lang="en" data-textdirection="ltr">
+<html class="loading light-layout" lang="en" id="html" data-textdirection="ltr">
   <!-- BEGIN: Head-->
 
   <head>
@@ -68,7 +68,6 @@
     <!-- BEGIN Vendor JS-->
 
     <!-- BEGIN: Page Vendor JS-->
-    <script src="/static/app-assets/vendors/js/charts/apexcharts.min.js"></script>
     <script src="/static/app-assets/vendors/js/extensions/toastr.min.js"></script>
     <!-- END: Page Vendor JS-->
 
@@ -77,9 +76,7 @@
     <script src="/static/app-assets/js/core/app.js"></script>
     <!-- END: Theme JS-->
 
-    <!-- BEGIN: Page JS-->
-    <script src="/static/app-assets/js/scripts/pages/dashboard-ecommerce.js"></script>
-    <!-- END: Page JS-->
+  
 
     <script>
       $(window).on("load", function () {
@@ -90,6 +87,11 @@
           });
         }
       });
+
+          
+
+      
+
     </script>
   </body>
   <!-- END: Body-->
