--- a/core/backend/student/templates/includes/navbar.html
+++ b/core/backend/student/templates/includes/navbar.html
@@ -17,11 +17,15 @@
           ></a>
         </li>
       </ul>
+      <ul class="nav navbar-nav bookmark-icons">
+        <li class="nav-item d-none d-lg-block"><a class="nav-link" href="javascript:void(0)" data-toggle="tooltip" data-placement="top" title="Email"><i class="ficon" data-feather="mail"></i></a></li>
+        <li class="nav-item d-none d-lg-block"><a class="nav-link" href="javascript:void(0)" data-toggle="tooltip" data-placement="top" title="Chat"><i class="ficon" data-feather="message-square"></i></a></li>
+        <li class="nav-item d-none d-lg-block"><a class="nav-link" href="javascript:void(0)" data-toggle="tooltip" data-placement="top" title="Todo"><i class="ficon" data-feather="check-square"></i></a></li>
+    </ul>
     </div>
     <ul class="nav navbar-nav align-items-center ml-auto">
-      <li class="nav-item d-none d-lg-block">
-        <a class="nav-link nav-link-style"
-          ><i class="ficon" data-feather="moon"></i
+      <li class="nav-item d-none d-lg-block" id="theme-setting">
+        <a class="nav-link nav-link-style" ><i class="ficon" data-feather="moon"></i
         ></a>
       </li>
       <li class="nav-item nav-search">
@@ -67,15 +71,15 @@
           class="dropdown-menu dropdown-menu-right"
           aria-labelledby="dropdown-user"
         >
-          <a class="dropdown-item" href="page-profile.html">
+          <a class="dropdown-item" href="javascript:void(0)">
             <i class="mr-50" data-feather="user"></i>
             Profile
           </a>
-          <a class="dropdown-item" href="page-account-settings.html">
+          <a class="dropdown-item" href="{% url "settings" %}">
             <i class="mr-50" data-feather="settings"></i> Settings
           </a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="page-auth-login-v2.html"
+          <a class="dropdown-item" href="{% url "logout" %}"
             ><i class="mr-50" data-feather="power"></i> Logout</a
           >
         </div>
@@ -176,7 +180,7 @@
                 </g>
               </g></svg
           ></span>
-          <h2 class="brand-text">Vuexy</h2>
+          <h2 class="brand-text">ThreeZero</h2>
         </a>
       </li>
       <li class="nav-item nav-toggle">
@@ -207,35 +211,111 @@
       data-menu="menu-navigation"
     >
       <li class="nav-item">
-        <a class="d-flex align-items-center" href="index.html"
+        <a class="d-flex align-items-center" href="{% url "student-home" %}"
           ><i data-feather="home"></i
           ><span class="menu-title text-truncate" data-i18n="Dashboards"
-            >Dashboards</span
-          ><span class="badge badge-light-warning badge-pill ml-auto mr-1"
-            >2</span
-          ></a
-        >
-        <ul class="menu-content">
-          <li>
-            <a class="d-flex align-items-center" href="dashboard-analytics.html"
-              ><i data-feather="circle"></i
-              ><span class="menu-item text-truncate" data-i18n="Analytics"
-                >Analytics</span
-              ></a
-            >
-          </li>
-        </ul>
+            >Dashboard</span
+          ></a>
       </li>
       <li class="navigation-header">
-        <span data-i18n="Apps &amp; Pages">Apps &amp; Pages</span
+        <span data-i18n="Apps &amp; Pages">Apps &amp; Settings</span
         ><i data-feather="more-horizontal"></i>
       </li>
       <li class="nav-item">
-        <a class="d-flex align-items-center" href="{% url "quiz-list" %}"
-          ><i data-feather='twitch'></i><span class="menu-title text-truncate" data-i18n="Email"
-            >Quizzes</span
-          ></a
-        >
+        <a class="d-flex align-items-center" href="javascript:void(0)">
+          <i data-feather='play-circle'></i>
+          <span class="menu-title text-truncate" >Video & Codes</span
+          >
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="d-flex align-items-center" href="javascript:void(0)">
+          <i class="fas fa-layer-group"></i>
+          <span class="menu-title text-truncate" >Study Material</span
+          >
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="d-flex align-items-center" href="javascript:void(0)">
+          <i class="fas fa-tasks"></i>
+          <span class="menu-title text-truncate" >Today's Task</span
+          >
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="d-flex align-items-center" href="javascript:void(0)">
+          <i class="fas fa-coins"></i>
+          <span class="menu-title text-truncate" >
+            Generate token to solve error
+          </span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="d-flex align-items-center" href="javascript:void(0)">
+          <i class="fas fa-book"></i>
+          <span class="menu-title text-truncate" >Exam Preparation</span
+          >
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="d-flex align-items-center" href="javascript:void(0)">
+          <i class="far fa-comments"></i>
+          <span class="menu-title text-truncate" >Discussion Forum</span
+          >
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="d-flex align-items-center" href="javascript:void(0)">
+          <i data-feather='download'></i>
+          <span class="menu-title text-truncate" >Software Kit</span
+          >
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="d-flex align-items-center" href="javascript:void(0)">
+          <i data-feather='clipboard'></i>
+          <span class="menu-title text-truncate" >Online Test</span
+          >
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="d-flex align-items-center" href="javascript:void(0)">
+          <i data-feather='help-circle'></i>
+          <span class="menu-title text-truncate" >Help</span
+          >
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="d-flex align-items-center" href="javascript:void(0)">
+          <i data-feather='message-square'></i>
+          <span class="menu-title text-truncate" >Sent Feedback</span
+          >
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="d-flex align-items-center" href="javascript:void(0)">
+          <i class="far fa-handshake"></i>
+          <span class="menu-title text-truncate" >Follow us on social media</span
+          >
+        </a>
+      </li>
+      <hr>
+      <li class="navigation-header">
+        <span data-i18n="Apps &amp; Pages">Update Profile</span
+        ><i data-feather="more-horizontal"></i>
+      </li>
+      <li class="nav-item">
+        <a class="d-flex align-items-center" href="javascript:void(0)">
+          <img
+              class="round"
+              src="/static/app-assets/images/portrait/small/avatar-s-11.jpg"
+              alt="avatar"
+              height="35"
+              width="35" />
+          <span class="menu-title text-truncate ml-1" >Rahul Rai</span
+          >
+          <span class="bullet bullet-primary font-small-3 ml-auto cursor-pointer"></span>
+        </a>
       </li>
     </ul>
   </div>
